openshift/00-deploy-otel-collector.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quarkus
