openshift/11-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quarkus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-app
  namespace: quarkus
  labels:
    app: quarkus-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-app
  template:
    metadata:
      labels:
        app: quarkus-app
    spec:
      containers:
        - name: app
          image:  ghcr.io/brunobat/quarkus-observability-openshift/app:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: quarkus-app
  namespace: quarkus
spec:
  selector:
    app: quarkus-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quarkus-app
  namespace: quarkus
spec:
  path: /veggies
  to:
    kind: Service
    name: quarkus-app
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: database
  name: database
  namespace: quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: database
  strategy: {}
  template:
    metadata:
      labels:
        app.kubernetes.io/component: database
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: test
            - name: POSTGRES_PASSWORD
              value: changeit
            - name: POSTGRES_USER
              value: pguser
          image: postgres:15
          imagePullPolicy: "IfNotPresent"
          name: database
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: database-data
              readOnly: false
      restartPolicy: Always
      volumes:
        - name: database-data
          emptyDir:
            sizeLimit: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: quarkus
spec:
  selector:
    app.kubernetes.io/component: database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
